Implement working resolveCoref method in VildeAnnotater
Not yet in use but should work fine.

--- a/features.ipynb
+++ b/features.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -43,7 +43,7 @@
      "text": [
       "Marking se.lth.cs.nlp:docforia:1.0-SNAPSHOT for download\n",
       "Preparing to fetch from:\n",
-      "-> file:/var/folders/28/5mj8jbrd13z_nssxk35nd25c0000gn/T/toree_add_deps8344678845664320834/\n",
+      "-> file:/var/folders/28/5mj8jbrd13z_nssxk35nd25c0000gn/T/toree_add_deps8234528462432356968/\n",
       "-> file:/Users/axel/.m2/repository\n",
       "-> https://repo1.maven.org/maven2\n",
       "-> New file at /Users/axel/.m2/repository/se/lth/cs/nlp/docforia/1.0-SNAPSHOT/docforia-1.0-SNAPSHOT.jar\n",
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -666,26 +666,28 @@
      "text": [
       "Marking org.scalaj:scalaj-http_2.10:2.3.0 for download\n",
       "Preparing to fetch from:\n",
-      "-> file:/var/folders/28/5mj8jbrd13z_nssxk35nd25c0000gn/T/toree_add_deps8344678845664320834/\n",
+      "-> file:/var/folders/28/5mj8jbrd13z_nssxk35nd25c0000gn/T/toree_add_deps8234528462432356968/\n",
       "-> https://repo1.maven.org/maven2\n",
-      "-> New file at /var/folders/28/5mj8jbrd13z_nssxk35nd25c0000gn/T/toree_add_deps8344678845664320834/https/repo1.maven.org/maven2/org/scalaj/scalaj-http_2.10/2.3.0/scalaj-http_2.10-2.3.0.jar\n"
+      "-> New file at /var/folders/28/5mj8jbrd13z_nssxk35nd25c0000gn/T/toree_add_deps8234528462432356968/https/repo1.maven.org/maven2/org/scalaj/scalaj-http_2.10/2.3.0/scalaj-http_2.10-2.3.0.jar\n",
+      "Marking se.lth.cs.nlp:docforia:1.0-SNAPSHOT for download\n",
+      "Preparing to fetch from:\n",
+      "-> file:/var/folders/28/5mj8jbrd13z_nssxk35nd25c0000gn/T/toree_add_deps8234528462432356968/\n",
+      "-> file:/Users/axel/.m2/repository\n",
+      "-> https://repo1.maven.org/maven2\n",
+      "-> New file at /Users/axel/.m2/repository/se/lth/cs/nlp/docforia/1.0-SNAPSHOT/docforia-1.0-SNAPSHOT.jar\n",
+      "-> New file at /Users/axel/.m2/repository/com/fasterxml/jackson/core/jackson-annotations/2.7.0/jackson-annotations-2.7.0.jar\n",
+      "-> New file at /Users/axel/.m2/repository/com/fasterxml/jackson/core/jackson-databind/2.7.3/jackson-databind-2.7.3.jar\n",
+      "-> New file at /Users/axel/.m2/repository/junit/junit/4.11/junit-4.11.jar\n",
+      "-> New file at /Users/axel/.m2/repository/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar\n",
+      "-> New file at /Users/axel/.m2/repository/com/fasterxml/jackson/core/jackson-core/2.7.3/jackson-core-2.7.3.jar\n",
+      "-> New file at /Users/axel/.m2/repository/com/google/protobuf/protobuf-java/2.6.1/protobuf-java-2.6.1.jar\n",
+      "-> New file at /Users/axel/.m2/repository/it/unimi/dsi/fastutil/6.3/fastutil-6.3.jar\n"
      ]
     }
    ],
    "source": [
-    "%AddDeps org.scalaj scalaj-http_2.10 2.3.0 --transitive"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
+    "%AddDeps org.scalaj scalaj-http_2.10 2.3.0 --transitive\n",
+    "%AddDeps se.lth.cs.nlp docforia 1.0-SNAPSHOT --transitive --repository file:/Users/axel/.m2/repository\n",
     "import scalaj.http._\n",
     "import se.lth.cs.docforia.Document\n",
     "import se.lth.cs.docforia.memstore.MemoryDocument\n",
@@ -693,9 +695,19 @@
     "import se.lth.cs.docforia.graph.text.{CoreferenceChainEdge, CoreferenceChain, CoreferenceMention, NamedEntity, Sentence, Token}\n",
     "import se.lth.cs.docforia.memstore.MemoryDocumentIO\n",
     "import se.lth.cs.docforia.query.{QueryCollectors, StreamUtils}\n",
-    "import scala.collection.JavaConverters._\n",
-    "\n",
-    "\n",
+    "import scala.collection.JavaConverters._"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
     "def annotate(input: String, lang: String, conf: String): Either[String, Document] = {\n",
     "    val CONNECTION_TIMEOUT = 2000\n",
     "    val READ_TIMEOUT = 10000\n",
@@ -717,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 115,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -726,26 +738,45 @@
    "outputs": [],
    "source": [
     "def resolveCoref(doc: Document): Document = {\n",
+    "    val T = Token.`var`()\n",
     "    val M = CoreferenceMention.`var`()\n",
     "    val NED = NamedEntityDisambiguation.`var`()\n",
-    "    val EDGE = CoreferenceChainEdge.`var`()\n",
-    "    val T = Token.`var`()\n",
-    "    \n",
     "\n",
-    "\n",
-    "    val nedGroups = doc.select(T, M, NED).where(T).coveredBy(M)\n",
+    "    val chains = doc.select(T, M, NED).where(T).coveredBy(M).where(NED).coveredBy(M)\n",
     "      .stream()\n",
-    "      .collect(QueryCollectors.groupBy(doc, M).values(T).collector())\n",
+    "      .collect(QueryCollectors.groupBy(doc, M, NED).values(T).collector())\n",
     "      .asScala\n",
     "      .map(pg => {\n",
-    "        val what = pg.key().get(M).connectedEdges(classOf[CoreferenceChainEdge]).asScala.toList\n",
-    "        val corefs = what.flatMap(edge => edge.getHead[CoreferenceChain].connectedNodes(classOf[CoreferenceMention]).asScala.toList)\n",
-    "        val thisCoref = pg.key(M)\n",
-    "val ned = corefs.filter(coref => coref.getProperty(\"mention-type\") == \"PROPER\").headOption\n",
-    "        (thisCoref, corefs, ned)\n",
+    "        val mention = pg.key(M)\n",
+    "        val corefs = mention\n",
+    "          .connectedEdges(classOf[CoreferenceChainEdge]).asScala\n",
+    "          .flatMap(edge => edge.getHead[CoreferenceChain].connectedNodes(classOf[CoreferenceMention]).asScala)\n",
+    "\n",
+    "        val ned = pg.key(NED)\n",
+    "        val mentions = corefs.filter(m => m.getProperty(\"mention-type\") != \"PROPER\").map(m => {\n",
+    "          val newNed = new NamedEntityDisambiguation(doc)\n",
+    "            .setRange(m.getStart, m.getEnd)\n",
+    "            .setIdentifier(ned.getIdentifier)\n",
+    "            .setScore(ned.getScore)\n",
+    "          m\n",
+    "        })\n",
+    "          \n",
+    "        println(s\"$ned -> $mentions\")\n",
+    "        println(\"*\"*20)\n",
+    "        (ned, mentions)\n",
     "      })\n",
     "      .toList\n",
-    "    println(nedGroups.mkString(\" \"))\n",
+    "      // println(chains.mkString(\" \"))\n",
+    "    \n",
+    "    // Print all the NED:s in the doc to check that it worked\n",
+    "    doc.select(T, NED).where(T).coveredBy(NED)\n",
+    "        .stream()\n",
+    "        .collect(QueryCollectors.groupBy(doc, NED).values(T).collector())\n",
+    "        .asScala\n",
+    "        .foreach(pg => {\n",
+    "            val ned = pg.key(NED)\n",
+    "            println(s\"ned: $ned ${ned.getIdentifier}\")\n",
+    "        })\n",
     "\n",
     "    doc\n",
     "}"
@@ -753,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 116,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -764,10 +795,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u0000\n",
-      "\u0000\n",
-      "\u0000\n",
-      "(Barack Obama,List(Barack Obama, He, He),\u0000) (He,List(Barack Obama, He, He),\u0000) (He,List(Barack Obama, He, He),\u0000)\n"
+      "Barack Obama -> List(He, He)\n",
+      "********************\n",
+      "ned: Barack Obama urn:wikidata:Q76\n",
+      "ned: He urn:wikidata:Q76\n",
+      "ned: Michelle urn:wikidata:Q13133\n",
+      "ned: He urn:wikidata:Q76\n"
      ]
     }
    ],
@@ -781,17 +814,6 @@
     "    case Left(e) => println(s\"error $e\")\n",
     "}"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
