Add label to coref resolution if present

--- a/features.ipynb
+++ b/features.ipynb
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -758,6 +758,8 @@
     "            .setRange(m.getStart, m.getEnd)\n",
     "            .setIdentifier(ned.getIdentifier)\n",
     "            .setScore(ned.getScore)\n",
+    "            if (ned.hasProperty(\"LABEL\"))\n",
+    "                newNed.putProperty(\"LABEL\", ned.getProperty(\"LABEL\"))\n",
     "          m\n",
     "        })\n",
     "          \n",
@@ -784,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -798,8 +800,8 @@
       "Barack Obama -> List(He, He)\n",
       "********************\n",
       "ned: Barack Obama urn:wikidata:Q76\n",
-      "ned: He urn:wikidata:Q76\n",
       "ned: Michelle urn:wikidata:Q13133\n",
+      "ned: He urn:wikidata:Q76\n",
       "ned: He urn:wikidata:Q76\n"
      ]
     }
@@ -814,15 +816,6 @@
     "    case Left(e) => println(s\"error $e\")\n",
     "}"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
